--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
             </a>
         </div>
     </header>
-    <section class="home--page__pic">
-        <div class="home-img">
-            <div class="home-text">
+    <section class="home-vid">
+        <div class="card">
+            <video autoplay muted loop id="home-video">
+                <source src="img/Kids.mp4" type="video/mp4">
+            </video>
+            <div class="content">
                 <h1>Welcome to My World</h1>
+                <button id="myBtn" onclick="myFunction()">Enter</button>
             </div>
         </div>
+
     </section>
 
 </body>
