--- a/Games/index.html
+++ b/Games/index.html
@@ -2,8 +2,7 @@
 
 <head>
     <meta lang="en">
-    <title>Megan's Virtual World</title>
-    <meta charset="utf-8">
+    <meta charset="uft-8">
     <meta name="viewport" content="width=device-width, initial-scale=">
 
     <!-- Latest compiled and minified CSS -->
@@ -33,22 +32,7 @@
             </a>
         </div>
     </header>
-    <section class="home-vid">
-        <div class="card">
-            <video autoplay muted loop id="home-video">
-                <source src="img/Kids.mp4" type="video/mp4">
-            </video>
-            <div class="content">
-                <h1>Welcome to My World</h1>
-                <button id="myBtn" onclick="myFunction()">Enter</button>
-            </div>
-        </div>
-
-    </section>
 
 </body>
-<footer>
-
-</footer>
 
 </html>
