Added picture and JS code
Added background photo to the Games page. Added a scroll to Games page. Stilling trying to adjust Card element in CSS in Game page.

--- a/Games/index.html
+++ b/Games/index.html
@@ -22,8 +22,8 @@
 <body>
     <header>
         <div class="topnav" id="mytopnav">
-            <a href="/index.html" class="active">Home</a>
-            <a href="/games">Games</a>
+            <a href="/index.html">Home</a>
+            <a href="/games" class="active">Games</a>
             <a href="/explore">Explore</a>
             <a href="/shop">Shops</a>
             <a href="/mypet">My Pet</a>
@@ -33,6 +33,12 @@
         </div>
     </header>
 
+    <section class="game-card">
+        <div class="card">
+            <img src="Cosmos.jpg" alt="Cosmos">
+        </div>
+
+    </section>
 </body>
 
 </html>
